LPS-92454 regen'ing exposes this bug, so fix the name
