# modules/apps/headless/headless-foundation/headless-foundation-impl/rest-openapi.yaml
@@ -716,11 +716,11 @@ paths:
                                 $ref: "#/components/schemas/Keyword"
                     description: ""
             tags: ["Keyword"]
-    "/my-user-accounts/{my-user-account-id}":
+    "/my-user-accounts/{user-account-id}":
         get:
             parameters:
                 - in: path
-                  name: my-user-account-id
+                  name: user-account-id
                   required: true
                   schema:
                       format: int64
@@ -733,11 +733,11 @@ paths:
                                 $ref: "#/components/schemas/UserAccount"
                     description: ""
             tags: ["UserAccount"]
-    "/my-user-accounts/{my-user-account-id}/organizations":
+    "/my-user-accounts/{user-account-id}/organizations":
         get:
             parameters:
                 - in: path
-                  name: my-user-account-id
+                  name: user-account-id
                   required: true
                   schema:
                       format: int64
@@ -760,11 +760,11 @@ paths:
                                 type: array
                     description: ""
             tags: ["Organization"]
-    "/my-user-accounts/{my-user-account-id}/roles":
+    "/my-user-accounts/{user-account-id}/roles":
         get:
             parameters:
                 - in: path
-                  name: my-user-account-id
+                  name: user-account-id
                   required: true
                   schema:
                       format: int64
